<resources>
    <string name="app_name">Github User</string>
    <string name="search_user">Search User</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="search">Search</string>
    <string name="detail_user">Detail User</string>
    <string name="repository">Repository</string>
    <string name="share">Share</string>
    <string name="alarm">Setting Alarm</string>
    <string name="language">Change Language</string>
    <string name="favourite">Favourite</string>s
    <string name="favourite_user">Favourite User</string>s
    <string name="check_profile">Hey, check this profile of</string>
    <string name="on">on</string>
    <string name="reminder">Reminder at 09.00 AM</string>
    <string name="reminder_title">Reminder</string>
    <string name="notification">Notification</string>
    <string name="notification_text">Let\'s find popular user on Github!</string>
    <string name="off_alarm_set">Reminder is turned off</string>
    <string name="alarm_set">Reminder is set at 09.00 AM</string>
    <string name="delete">delete</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="alert">Warning</string>
    <string name="message">Do you want to remove the user from the favorite list</string>
    <string name="no_data">No data</string>
    <string name="failed_delete">Data failed to delete</string>
    <string name="success_delete">Data success to delete</string>
    <string name="failed_add_data">Failed to add data</string>
    <string name="success_add_data">Successfully added data</string>


</resources>