<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/alarm"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>